[tool.poetry]
name = "test-api.k6.io"
version = "0.0.5"
description = "A simple REST and Websocket service designed for experimentation with k6"
authors = ["k6 <developers@k6.io>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django = "^5.1.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
mysqlclient = "^2.2.5"
channels = "^4.1.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.dev-dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
